<resources>
    <string name="a2dp_sink_not_connected">Bluetooth Media disconnected</string>
    <string name="aa_connect_bt_close">Android Auto连接中，无法关闭</string>
    <string name="aa_connect_change">当前Android Auto已连接,是否切换为（%s）</string>
    <string name="aa_connect_status_failed_1">Android Auto连接失败</string>
    <string name="aa_connect_status_failed_2">连接失败，请将Phone更新至最新系统</string>
    <string name="aa_connect_status_failed_3">当前设备不支持Android Auto</string>
    <string name="aa_connect_status_failed_err_1">Android Auto设备出现连接错误</string>
    <string name="aa_connect_status_failed_err_2">请检查手机WiFi网络是否开启</string>
    <string name="aa_connect_status_failed_err_3">Android Auto设备出现连接错误</string>
    <string name="aa_connect_status_failed_err_4">Android Auto 连接已断开</string>
    <string name="aa_connect_status_failed_err_5">手机电量低，请充电</string>
    <string name="aa_connect_status_success">Android Auto连接成功</string>
    <string name="aa_connect_switch_text">%s 支持Android Auto. 是否切换?</string>
    <string name="aa_connect_usable">支持无线Android Auto连接</string>
    <string name="aa_connect_wifi_close">关闭后，将断开Android Auto连接？</string>
    <string name="aa_connect_wifi_on">需要开启热点连接Android Auto？</string>
    <string name="aa_connect_wifi_open">打开后，将断开Android Auto连接？</string>
    <string name="aa_connected">Android Auto已连接</string>
    <string name="aa_disconnect_confirm">确认断开Android Auto吗？</string>
    <string name="aa_support">该设备支持Android Auto,是否连接？</string>
    <string name="aa_switch_bluetooth">确认断开Android Auto,连接蓝牙吗？</string>
    <string name="aa_text_notnow">稍后</string>
    <string name="aa_text_switch">切换</string>
    <string name="aa_to_cp">您想切换Android Auto为Apple CarPlay嘛？</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal">暂停</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">Color correction allows you to adjust how colors are displayed on your device</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_manual_zen_less_time">Less time.</string>
    <string name="accessibility_manual_zen_more_time">More time.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_security_type_none">Open network</string>
    <string name="accessibility_wifi_security_type_secured">Secure network</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessor_expires_text">Lease expires at %s</string>
    <string name="accessor_info_title">Apps sharing data</string>
    <string name="accessor_no_description_text">No description provided by the app.</string>
    <string name="activation_speed_text">激活速度设定</string>
    <string name="active">Calling</string>
    <string name="active_input_method_subtypes">Active input methods</string>
    <string name="adb_device_fingerprint_title_format">Device fingerprint: %1$s</string>
    <string name="adb_device_forget">Forget</string>
    <string name="adb_keys_warning_message">Revoke access to USB debugging from all computers you’ve previously authorized?</string>
    <string name="adb_pair_method_code_summary">Pair new devices using six digit code</string>
    <string name="adb_pair_method_code_title">Pair device with pairing code</string>
    <string name="adb_pair_method_qrcode_summary">Pair new devices using QR code scanner</string>
    <string name="adb_pair_method_qrcode_title">Pair device with QR code</string>
    <string name="adb_paired_devices_title">Paired devices</string>
    <string name="adb_pairing_device_dialog_failed_msg">Make sure the device is connected to the same network.</string>
    <string name="adb_pairing_device_dialog_failed_title">Pairing unsuccessful</string>
    <string name="adb_pairing_device_dialog_pairing_code_label">Wi‑Fi pairing code</string>
    <string name="adb_pairing_device_dialog_title">Pair with device</string>
    <string name="adb_qrcode_pairing_device_failed_msg">Failed to pair the device. Either the QR code was incorrect, or the device is not connected to the same network.</string>
    <string name="adb_warning_message">USB debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="adb_warning_title">Allow USB debugging?</string>
    <string name="adb_wireless_connection_failed_message">Make sure %1$s is connected to the correct network</string>
    <string name="adb_wireless_connection_failed_title">Connection unsuccessful</string>
    <string name="adb_wireless_device_connected_summary">Currently connected</string>
    <string name="adb_wireless_device_details_title">Device details</string>
    <string name="adb_wireless_error">Error</string>
    <string name="adb_wireless_ip_addr_preference_title">IP address &amp; Port</string>
    <string name="adb_wireless_list_empty_off">To see and use available devices, turn on wireless debugging</string>
    <string name="adb_wireless_no_network_msg">Please connect to a Wi‑Fi network</string>
    <string name="adb_wireless_qrcode_pairing_description">Pair device over Wi‑Fi by scanning a QR code</string>
    <string name="adb_wireless_qrcode_pairing_title">Scan QR code</string>
    <string name="adb_wireless_qrcode_summary">Pair device over Wi‑Fi by scanning a QR code</string>
    <string name="adb_wireless_settings">Wireless debugging</string>
    <string name="adb_wireless_verifying_qrcode_text">Pairing device…</string>
    <string name="adbwifi_warning_message">Wireless debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="adbwifi_warning_title">Allow wireless debugging?</string>
    <string name="add_devices">添加设备</string>
    <string name="air_conditioner_system_title">空调系统：</string>
    <string name="alarm_template">at %1$s</string>
    <string name="alarm_template_far">on %1$s</string>
    <string name="alerting">Outgoing Call</string>
    <string name="allow_mock_location">Allow mock locations</string>
    <string name="allow_mock_location_summary">Allow mock locations</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animator_duration_scale_title">Animator duration scale</string>
    <string name="apn_settings_not_available">Access Point Name settings are not available for this user</string>
    <string name="apn_state_title">APN状态：</string>
    <string name="app_name">VehicleSettings</string>
    <string name="app_process_limit_title">Background process limit</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_luminance_title">自动亮度调节</string>
    <string name="auto_sync_contact">自动同步手机联系人</string>
    <string name="auto_sync_time_title">自动同步时间</string>
    <string name="available_device">可用设备</string>
    <string name="available_via_carrier">Available via %1$s</string>
    <string name="setting_rear_mirror_close">折叠</string>
    <string name="setting_rear_mirror_lock_close">锁车自动折叠</string>
    <string name="setting_rear_mirror_memory_set">记忆设置</string>
    <string name="setting_rear_mirror_memory_set_one">姿态一</string>
    <string name="setting_rear_mirror_open">展开</string>
    <string name="setting_rear_mirror_reverse_mode">后视镜倒车模式</string>
    <string name="setting_rear_mirror_reverse_mode_four">两侧</string>
    <string name="setting_rear_mirror_reverse_mode_one">关闭</string>
    <string name="setting_rear_mirror_reverse_mode_three">副驾</string>
    <string name="setting_rear_mirror_reverse_mode_two">主驾</string>
    <string name="setting_rear_mirror_tips">当前方向盘按键处于后视镜调节模式</string>
    <string name="setting_seat_massage_mode">按摩模式</string>
    <string name="setting_seat_massage_mode_five">跳跃</string>
    <string name="setting_seat_massage_mode_four">舒缓</string>
    <string name="setting_seat_massage_mode_one">波浪</string>
    <string name="setting_seat_massage_mode_three">交叉</string>
    <string name="setting_seat_massage_mode_two">猫步</string>
    <string name="setting_seat_massage_strength">按摩强度</string>
    <string name="setting_seat_massage_strength_one">柔和</string>
    <string name="setting_seat_massage_strength_three">强劲</string>
    <string name="setting_seat_massage_strength_two">适中</string>
    <string name="setting_seat_massage_text">座椅按摩</string>
    <string name="setting_wide_rear_mirror">外后视镜</string>
    <string name="language_ar">العربية</string>
    <string name="language_es">español</string>
    <string name="language_eu">English</string>
    <string name="language_fr">Français</string>
    <string name="language_kk">Қазақ</string>
    <string name="language_pl">فارسی</string>
    <string name="language_pt">Português</string>
    <string name="language_ru">Русский</string>
    <string name="language_uk">yкраїнська</string>
    <string name="language_uz">Oʻzbek</string>
    <string name="language_zh">中文</string>
    <string name="launguage_set_title">语言选择</string>
    <string name="setting_display_unit_car_speed_kmh">km/h</string>
    <string name="setting_display_unit_car_speed_mph">mph</string>
    <string name="setting_display_unit_car_speed_unit">车速单位</string>
    <string name="setting_display_unit_temperature_c">摄氏度°C</string>
    <string name="setting_display_unit_temperature_f">华氏度°F</string>
    <string name="setting_display_unit_temperature_unit">温度单位</string>
    <string name="setting_display_unit_tyre_pressure_bar">Bar</string>
    <string name="setting_display_unit_tyre_pressure_kap">kPa</string>
    <string name="setting_display_unit_tyre_pressure_psi">psi</string>
    <string name="setting_display_unit_tyre_pressure_unit">胎压单位</string>
</resources>