<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/car_container" android:tag="layout/fragment_language_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="14.0px" android:layout_marginStart="64.0px" android:layout_marginEnd="102.0px"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/tv_language_setting" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/launguage_set_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/content_text_while_title_28_style" />
    <com.autolink.hmi.carsettings.view.wheel.ChangeLineView android:layout_width="1400.0px" android:layout_height="wrap_content" android:layout_marginTop="40.0px" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:gravity="center" android:id="@id/language_eu" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_eu" android:layout_marginStart="30.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_ar" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_ar" android:layout_marginStart="40.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_es" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_es" android:layout_marginStart="40.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_ru" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_ru" android:layout_marginStart="40.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_uk" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_uk" android:layout_marginStart="40.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_fr" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_fr" android:layout_marginStart="30.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_pt" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_pt" android:layout_marginStart="30.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_kk" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_kk" android:layout_marginStart="40.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_uz" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_uz" android:layout_marginStart="40.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_fa" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_pl" android:layout_marginStart="40.0px" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_en" android:background="@drawable/shape_wiper_gear" android:visibility="gone" android:layout_width="227.0px" android:layout_height="@dimen/dp80" style="@style/text_while_title_28_style" />
        <TextView android:gravity="center" android:id="@id/language_zh" android:background="@drawable/shape_wiper_gear" android:layout_width="227.0px" android:layout_height="@dimen/dp80" android:text="@string/language_zh" android:layout_marginStart="40.0px" style="@style/text_while_title_28_style" />
    </com.autolink.hmi.carsettings.view.wheel.ChangeLineView>
</androidx.constraintlayout.widget.ConstraintLayout>
