<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/flParentView" android:tag="layout/dirver_seat_massage_dialog_0" android:background="@color/transparent" android:layout_width="1872.0px" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_gravity="center_horizontal" android:layout_width="1872.0px" android:layout_height="880.0px" android:layout_marginBottom="15.0dip">
        <RelativeLayout android:id="@id/seat_message_bg" android:layout_width="1872.0px" android:layout_height="858.0px">
            <com.autolink.hmi.carsettings.view.ALButton android:id="@id/massageSeatBack" android:background="@drawable/icon_common_dialog_close" android:layout_width="56.0px" android:layout_height="56.0px" android:layout_marginLeft="32.0px" android:layout_marginTop="32.0px" />
            <LinearLayout android:gravity="center" android:id="@id/swSeatPickerLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="136.0px" android:layout_marginTop="128.0px">
                <com.autolink.hmi.carsettings.view.CustomSwitchButton android:id="@id/swSeatMassage" android:layout_width="74.0px" android:layout_height="40.0px" app:backgroundOff="@drawable/switch_off" app:backgroundOn="@drawable/switch_on" app:ball="@drawable/switch_ball" app:ballPadding="@dimen/dp2" app:ballWidth="@dimen/dp38" app:duration="300" />
                <TextView android:textSize="28.0px" android:textColor="@color/color_normal_text" android:id="@id/seat_massage_text" android:layout_width="168.0px" android:layout_height="44.0px" android:layout_marginLeft="20.0px" android:text="@string/setting_seat_massage_text" />
            </LinearLayout>
            <TextView android:textSize="28.0px" android:textColor="@color/color_normal_text" android:id="@id/tv_massage_strength" android:layout_width="168.0px" android:layout_height="41.0px" android:layout_marginLeft="136.0px" android:layout_marginTop="208.0px" android:text="@string/setting_seat_massage_strength" />
            <com.autolink.hmi.carsettings.view.CustomFrameLayout android:id="@id/flStrength" android:background="@drawable/lock_button_add_line_background" android:clickable="true" android:layout_width="558.0px" android:layout_height="80.0px" android:layout_marginLeft="136.0px" android:layout_marginTop="280.0px">
                <com.autolink.hmi.carsettings.view.CustomTabLayoutView android:id="@id/tabStrengthWindow" android:layout_width="fill_parent" android:layout_height="fill_parent" app:tabIndicator="@drawable/tab_indicator_bg" style="@style/CustomTabLayout" />
                <TextView android:textSize="28.0px" android:textColor="@color/lock_text_color" android:gravity="center" android:id="@id/strength_one" android:layout_width="186.0px" android:layout_height="80.0px" android:text="@string/setting_seat_massage_strength_one" />
                <TextView android:textSize="28.0px" android:textColor="@color/lock_text_color" android:gravity="center" android:id="@id/strength_two" android:layout_width="186.0px" android:layout_height="80.0px" android:layout_marginLeft="186.0px" android:text="@string/setting_seat_massage_strength_two" />
                <TextView android:textSize="28.0px" android:textColor="@color/lock_text_color" android:gravity="center" android:id="@id/strength_three" android:layout_width="186.0px" android:layout_height="80.0px" android:layout_marginLeft="372.0px" android:text="@string/setting_seat_massage_strength_three" />
            </com.autolink.hmi.carsettings.view.CustomFrameLayout>
            <TextView android:textSize="28.0px" android:textColor="@color/color_normal_text" android:id="@id/massage_mode_title" android:layout_width="168.0px" android:layout_height="41.0px" android:layout_marginLeft="136.0px" android:layout_marginTop="400.0px" android:text="@string/setting_seat_massage_mode" />
            <com.autolink.hmi.carsettings.view.CustomFrameLayout android:id="@id/flMode" android:background="@drawable/lock_button_add_line_background" android:clickable="true" android:layout_width="930.0px" android:layout_height="80.0px" android:layout_marginLeft="136.0px" android:layout_marginTop="472.0px">
                <com.autolink.hmi.carsettings.view.CustomTabLayoutView android:id="@id/tabModeWindow" android:layout_width="fill_parent" android:layout_height="fill_parent" app:tabIndicator="@drawable/tab_indicator_bg" style="@style/CustomTabLayout" />
                <TextView android:textSize="28.0px" android:textColor="@color/lock_text_color" android:gravity="center" android:id="@id/mode_one" android:layout_width="186.0px" android:layout_height="80.0px" android:text="@string/setting_seat_massage_mode_one" />
                <TextView android:textSize="28.0px" android:textColor="@color/lock_text_color" android:gravity="center" android:id="@id/mode_two" android:layout_width="186.0px" android:layout_height="80.0px" android:layout_marginLeft="186.0px" android:text="@string/setting_seat_massage_mode_two" />
                <TextView android:textSize="28.0px" android:textColor="@color/lock_text_color" android:gravity="center" android:id="@id/mode_three" android:layout_width="186.0px" android:layout_height="80.0px" android:layout_marginLeft="372.0px" android:text="@string/setting_seat_massage_mode_three" />
                <TextView android:textSize="28.0px" android:textColor="@color/lock_text_color" android:gravity="center" android:id="@id/mode_four" android:layout_width="186.0px" android:layout_height="80.0px" android:layout_marginLeft="558.0px" android:text="@string/setting_seat_massage_mode_four" />
                <TextView android:textSize="28.0px" android:textColor="@color/lock_text_color" android:gravity="center" android:id="@id/mode_five" android:layout_width="186.0px" android:layout_height="80.0px" android:layout_marginLeft="744.0px" android:text="@string/setting_seat_massage_mode_five" />
            </com.autolink.hmi.carsettings.view.CustomFrameLayout>
        </RelativeLayout>
    </FrameLayout>
</FrameLayout>
